--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
+    <!-- Nav -->
+     <nav>
+
+     </nav>
     <!-- Header -->
     <header>
         <h1>Header</h1>
@@ -26,7 +30,7 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="mt-auto">
         <p>footer</p>
     </footer>
 
