--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap import -->
+    <meta name="description" content="A website for a gym and fitnesscenter in Uppsala. Be a member today and improve your body!">
+    <!-- Favicons provided from favicon.io -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/site.webmanifest">
+    
+    <!-- Bootstrap 5 import -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
-    <!-- CSS Link -->    
+    <!-- Custom CSS Link -->    
      <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>GetStrong</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
