--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Farsan&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+
+
 
     <!-- Bootstrap 5 import -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,12 +29,14 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
+    <!--
     <div class="hero-img container-fluid">
 
-    </div>
+    </div> 
+    -->
     
             <!-- Nav -->
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"><img src="assets/images/android-chrome small.jpg" alt="GetStrong logo" id="gs-logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
