Add starting style to footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- Nav -->
             <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html"><img src="assets/images/android-chrome small.jpg" alt="GetStrong logo" id="gs-logo"></a>
+                    <a class="navbar-brand" href="index.html"><img src="assets/images/android-chrome-small.jpg" alt="GetStrong logo" id="gs-logo">GetStrong</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -55,7 +55,7 @@
             </nav>
             <!-- Header -->
             <header>
-                <h1>Header</h1>
+                <h1>Get started today!</h1>
             </header>
 
 
@@ -66,7 +66,8 @@
 
             <!-- Footer -->
             <footer class="mt-auto">
-                <p>footer</p>
+                <p>Copyright GetStrong 2024</p>
+                <p>123 45, Strong City</p>
             </footer>
 
             <!-- Bootstrap java import -->
