Add content to main page and styled

--- a/index.html
+++ b/index.html
@@ -34,47 +34,77 @@
 
     </div> 
     -->
-    
-            <!-- Nav -->
-            <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html"><img src="assets/images/android-chrome-small.jpg" alt="GetStrong logo" id="gs-logo">GetStrong</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            <a class="nav-link" href="#">Pricing</a>
-                            <a class="nav-link" href="#">Membership</a>
-                        </div>
-                    </div>
+
+    <!-- Nav -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><img src="assets/images/android-chrome-small.jpg"
+                    alt="GetStrong logo" id="gs-logo">GetStrong</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Membership</a>
                 </div>
-            </nav>
-            <!-- Header -->
-            <header>
-                <h1>Get started today!</h1>
-            </header>
+            </div>
+        </div>
+    </nav>
+    <!-- Header -->
+    <header>
+        <h1 class="display-1">Get started today!</h1>
+    </header>
 
 
-            <!-- Main content -->
-            <main>
-                <p>Main</p>
-            </main>
+    <!-- Main content -->
+    <main>
+        <h2 class="display-2">Our locations</h2>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="card">
+                <div class="card-body">
+                  <h3 class="card-title">Uppsala</h3>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <div class="card-body">
+                  <h3 class="card-title">Stockholm</h3>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <div class="card-body">
+                  <h3 class="card-title">Gothenburg</h3>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    <h3 class="card-title">Knivsta</h3>
+                  </div>
+                </div>
+              </div>
+          </div>
+    </main>
 
-            <!-- Footer -->
-            <footer class="mt-auto">
-                <p>Copyright GetStrong 2024</p>
-                <p>123 45, Strong City</p>
-            </footer>
+    <!-- Footer -->
+    <footer class="mt-auto">
+        <p>Copyright GetStrong 2024</p>
+        <p>123 45, Strong City</p>
+    </footer>
 
-            <!-- Bootstrap java import -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                crossorigin="anonymous">
-            </script>
+    <!-- Bootstrap java import -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
