--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Main content -->
     <main>
         <h2 class="display-2">Our locations</h2>
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
             <div class="col">
               <div class="card">
                 <div class="card-body">
