add social links to footer and finished styling them

--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,9 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link" href="pricing.html">Pricing</a>
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link active" href="contact.html">Contact</a>
                 </div>
             </div>
         </div>
@@ -61,38 +61,7 @@
 
     <!-- Main content -->
     <main>
-        <h2 class="display-2">Our locations</h2>
-        <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
-            <div class="col">
-              <div class="card">
-                <div class="card-body">
-                  <h3 class="card-title">Uppsala</h3>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-body">
-                  <h3 class="card-title">Stockholm</h3>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-body">
-                  <h3 class="card-title">Gothenburg</h3>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    <h3 class="card-title">Knivsta</h3>
-                  </div>
-                </div>
-              </div>
-          </div>
+        <h2 class="display-2">Contact Form</h2>
     </main>
 
     <!-- Footer -->
@@ -111,6 +80,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
+
     <!-- Fontawesome kit -->
     <script src="https://kit.fontawesome.com/1632d247b2.js" crossorigin="anonymous"></script>
 </body>
