--- a/pricing.html
+++ b/pricing.html
@@ -46,8 +46,8 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link" href="pricing.html">Pricing</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" href="pricing.html">Pricing</a>
                     <a class="nav-link" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -61,38 +61,7 @@
 
     <!-- Main content -->
     <main>
-        <h2 class="display-2">Our locations</h2>
-        <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
-            <div class="col">
-              <div class="card">
-                <div class="card-body">
-                  <h3 class="card-title">Uppsala</h3>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-body">
-                  <h3 class="card-title">Stockholm</h3>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-body">
-                  <h3 class="card-title">Gothenburg</h3>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    <h3 class="card-title">Knivsta</h3>
-                  </div>
-                </div>
-              </div>
-          </div>
+        <h2 class="display-2">Pricing</h2>
     </main>
 
     <!-- Footer -->
