Add cards to pricing page with responsivness

--- a/pricing.html
+++ b/pricing.html
@@ -55,13 +55,33 @@
     </nav>
     <!-- Header -->
     <header>
-        <h1 class="display-1">Get started today!</h1>
+        <h1 class="display-2">Choose a membership that suits your lifestyle!</h1>
     </header>
 
 
     <!-- Main content -->
     <main>
-        <h2 class="display-2">Pricing</h2>
+        <div class="pricing container-fluid justify-content-center row row-md-2">
+        <div class="card card-price mt-5" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card 1</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card card-price mt-5" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card 2</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card card-price mt-5" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card 3</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <h2 class="display-3">Pricing</h2>
     </main>
 
     <!-- Footer -->
