--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2 class="display-2">Our locations</h2>
         <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
             <div class="col">
-              <div class="card">
+              <div class="card card">
                 <div class="card-body">
                   <h3 class="card-title">Uppsala</h3>
                   <p class="card-text"></p>
@@ -72,14 +72,14 @@
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card card">
                 <div class="card-body">
                   <h3 class="card-title">Stockholm</h3>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card card">
                 <div class="card-body">
                   <h3 class="card-title">Gothenburg</h3>
                 </div>
