--- a/pricing.html
+++ b/pricing.html
@@ -55,33 +55,43 @@
     </nav>
     <!-- Header -->
     <header>
-        <h1 class="display-2">Choose a membership that suits your lifestyle!</h1>
+        <h1 class="display-3">Choose a membership that suits your lifestyle!</h1>
     </header>
 
 
     <!-- Main content -->
     <main>
         <div class="pricing container-fluid justify-content-center row row-md-2">
-        <div class="card card-price mt-5" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card 1</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="card card-price mt-5 pb-2" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title display-4">Basic</h5>
+                    <br>
+                    <p class="card-text">Includes free training in one of our local gym's. Perfect if you always train
+                        in your homecity!</p>
+                    <p class="card-text">199 Sek/month</p>
+                </div>
             </div>
-          </div>
-          <div class="card card-price mt-5" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card 2</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="card card-price mt-5" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title display-4">Flexible</h5>
+                    <br>
+                    <p class="card-text">If you would like to train in different locations in sweden and get free entry
+                        up to two gym's!</p>
+                    <p class="card-text">249 Sek/month</p>
+                </div>
             </div>
-          </div>
-          <div class="card card-price mt-5" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card 3</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="card card-price mt-5" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title display-4">Pro</h5>
+                    <br>
+                    <p class="card-text">Full access to all of our facilities, 5 proteinshakes included in the membership
+                        per month!</p>
+                    <p class="card-text">299 Sek/month</p>
+                </div>
             </div>
-          </div>
         </div>
-        <h2 class="display-3">Pricing</h2>
+        <p class="terms lead mt-4">You can cancel your subscription whenever you want and only be charged for the
+            current month.</p>
     </main>
 
     <!-- Footer -->
