--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,23 @@
     </nav>
     <!-- Header -->
     <header>
-        <h1 class="display-1">Get started today!</h1>
+        <h1 class="display-5">Contact us today for any questions or guidance!</h1>
     </header>
 
 
     <!-- Main content -->
     <main>
-        <h2 class="display-2">Contact Form</h2>
+        <div class="contactform container mt-4">
+        <form action ="https://formdump.codeinstitute.net/" method ="POST">
+            <label for="email" name="email">Your Email address</label><br>
+            <input type="email" name="email" id="email" placeholder="name@example.com" required>
+            <br>
+            <label for="questions">What can we help you with?</label><br>
+            <textarea name="questions" required></textarea><br>
+            <input type="submit" action="https://formdump.codeinstitute.net/" class="btn btn-secondary"  id="submit-button" value="Send">
+        </form>
+    </div>
+    </form>
     </main>
 
     <!-- Footer -->
