Finished readme file and final adjustment to the projects

--- a/contact.html
+++ b/contact.html
@@ -78,11 +78,11 @@
     <footer class="mt-auto">
         <p>Copyright GetStrong 2024</p>
         <p>123 45, Strong City</p>
-        <a href="https://x.com/" alt="Link to X (twitter) homepage (opens in a new window)" target="_blank"
+        <a href="https://x.com/" rel="noopener" aria-label="Visit our X account (opens in a new tab)" target="_blank"
             style="color: #000000"><i class="fa-brands fa-square-x-twitter"></i></a>
-        <a href="https://youtube.com/" alt="Link to youtube-page (opens in a new window)" target="_blank"
+        <a href="https://youtube.com/" rel="noopener" aria-label="Visit our youtube channel (opens in a new tab)" target="_blank"
             style="color: #000000"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://instagram.com/" alt="Link to Instagram (opens in a new window)" target="_blank"
+        <a href="https://instagram.com/" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)" target="_blank"
             style="color: #000000"><i class="fa-brands fa-square-instagram"></i></a>
     </footer>
 
