--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
     <footer class="mt-auto">
         <p>Copyright GetStrong 2024</p>
         <p>123 45, Strong City</p>
-        <a href="https://x.com/" alt="Link to X (twitter) homepage (opens in a new window)" target="_blank"
-            style="color: #000000"><i class="fa-brands fa-square-x-twitter"></i></a>
-        <a href="https://youtube.com/" alt="Link to youtube-page (opens in a new window)" target="_blank"
-            style="color: #000000"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://instagram.com/" alt="Link to Instagram (opens in a new window)" target="_blank"
-            style="color: #000000"><i class="fa-brands fa-square-instagram"></i></a>
+        <a href="https://x.com/" target="_blank"
+            style="color: #000000" rel="noopener" aria-label="Visit our X account (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
+        <a href="https://youtube.com/" target="_blank"
+            style="color: #000000" rel="noopener" aria-label="Visit our youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://instagram.com/" target="_blank"
+            style="color: #000000" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
     </footer>
 
     <!-- Bootstrap java import -->
