add background color to navbar

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
         <p>Copyright GetStrong 2024</p>
         <p>123 45, Strong City</p>
         <a href="https://x.com/" target="_blank"
-            style="color: #000000" rel="noopener" aria-label="Visit our X account (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
+            style="color: #ffffff" rel="noopener" aria-label="Visit our X account (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
         <a href="https://youtube.com/" target="_blank"
-            style="color: #000000" rel="noopener" aria-label="Visit our youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            style="color: #ffffff" rel="noopener" aria-label="Visit our youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
         <a href="https://instagram.com/" target="_blank"
-            style="color: #000000" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+            style="color: #ffffff" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
     </footer>
 
     <!-- Bootstrap java import -->
