add form label to contact form

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <label for="email" name="email">Your Email address</label><br>
             <input type="email" name="email" id="email" placeholder="name@example.com" required>
             <br>
-            <label for="questions">What can we help you with?</label><br>
+            <label for="questions" name="questions">What can we help you with?</label><br>
             <textarea name="questions" required></textarea><br>
             <input type="submit" action="https://formdump.codeinstitute.net/" class="btn btn-secondary"  id="submit-button" value="Send">
         </form>
