--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
             <input type="email" name="email" id="email" placeholder="name@example.com" required>
             <br>
             <label for="questions" name="questions">What can we help you with?</label><br>
-            <textarea name="questions" required></textarea><br>
+            <textarea name="questions" id="questions" required></textarea><br>
             <input type="submit" action="https://formdump.codeinstitute.net/" class="btn btn-secondary"  id="submit-button" value="Send">
         </form>
     </div>
