--- a/contact.html
+++ b/contact.html
@@ -63,15 +63,14 @@
     <main>
         <div class="contactform container mt-4">
         <form action ="https://formdump.codeinstitute.net/" method ="POST">
-            <label for="email" name="email">Your Email address</label><br>
+            <label for="email">Your Email address</label><br>
             <input type="email" name="email" id="email" placeholder="name@example.com" required>
             <br>
-            <label for="questions" name="questions">What can we help you with?</label><br>
+            <label for="questions">What can we help you with?</label><br>
             <textarea name="questions" id="questions" required></textarea><br>
-            <input type="submit" action="https://formdump.codeinstitute.net/" class="btn btn-secondary"  id="submit-button" value="Send">
+            <input type="submit" formaction="https://formdump.codeinstitute.net/" class="btn btn-secondary"  id="submit-button" value="Send">
         </form>
     </div>
-    </form>
     </main>
 
     <!-- Footer -->
