remove margin on last card in pricing for big screens

--- a/pricing.html
+++ b/pricing.html
@@ -80,7 +80,7 @@
                     <p class="card-text">249 Sek/month</p>
                 </div>
             </div>
-            <div class="card card-price mt-5 mb-4" style="width: 18rem;">
+            <div class="card card-price mt-5 last-card" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title display-4">Pro</h5>
                     <br>
